<resources>
    <string name="app_name">HW1</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ticket_price">Ticket Price:</string>
    <string name="discount_price">Discount Price:</string>
  <string name="discount">Discount:</string>
  <string name="_50">50%</string>
  <string name="_20">20%</string>
  <string name="_15">15%</string>
  <string name="_10">10%</string>
  <string name="_5">5%</string>
  <string name="enter_ticket_price">Enter Ticket Price</string>
  <string name="clear">Clear</string>
</resources>
