<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/titleBar"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="?attr/colorPrimary"

    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.414"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="Gemini Price Calculator" />

  <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    android:text="@string/ticket_price"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.048"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/titleBar" />

  <EditText
    android:id="@+id/editText_InputPrice"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/enter_ticket_price"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.18"
    app:layout_constraintStart_toEndOf="@+id/textView" />

  <RadioGroup
    android:id="@+id/radioGroup_Discount_Nothing"
    android:layout_width="306dp"
    android:layout_height="294dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.317"
    app:layout_constraintStart_toStartOf="parent"

    app:layout_constraintTop_toBottomOf="@+id/textView2">

    <RadioButton
      android:id="@+id/radioButton_5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/_5" />

    <RadioButton
      android:id="@+id/radioButton_10"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/_10" />

    <RadioButton
      android:id="@+id/radioButton_15"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/_15" />

    <RadioButton
      android:id="@+id/radioButton_20"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/_20" />

    <RadioButton
      android:id="@+id/radioButton_50"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/_50" />
  </RadioGroup>

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:text="@string/discount"
    android:textStyle="bold"
    android:textSize="10pt"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="28dp"
    android:text="@string/discount_price"
    android:textSize="10pt"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/radioGroup_Discount_Nothing" />

  <TextView
    android:id="@+id/DiscountPrice"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="208dp"
    android:layout_marginTop="28dp"
    android:text=""
    android:textSize="10pt"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/radioGroup_Discount_Nothing" />

  <Button
    android:id="@+id/button_Calculate"
    android:layout_width="324dp"
    android:layout_height="72dp"
    android:layout_marginTop="60dp"
    android:text="Calculate"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <Button
    android:id="@+id/button_clear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:text="@string/clear"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button_Calculate" />


</androidx.constraintlayout.widget.ConstraintLayout>
